--- a/2. Omega and Xi, Constraints.ipynb
+++ b/2. Omega and Xi, Constraints.ipynb
@@ -33,11 +33,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[-3.]\n",
+      " [ 2.]\n",
+      " [ 5.]]\n"
+     ]
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "\n",
@@ -84,9 +94,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:cvnd_1]",
+   "display_name": "base",
    "language": "python",
-   "name": "conda-env-cvnd_1-py"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -98,7 +108,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.2"
+   "version": "3.9.12"
   }
  },
  "nbformat": 4,
